syntax = "proto3";

message InputDescriptor {
  repeated uint32 shape = 1;
}