syntax = "proto3";

message OutputDescriptor {
  repeated uint32 shape = 1;
  string type = 2;
  repeated string classes = 3;
  // runtime fields, not used to calculate hash
  // bool earlyExit = 4;
}
