syntax = "proto3";

message ServiceDescriptor {
  // string version = 1;
  // string serviceId = 2;
  repeated StageDescriptor stages = 1;
}
